# edgecrab

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.win  Makefile  README.md  cdp-load-extension.js  extension-test-v2.js  extension-test.js  load-extension.js  package-lock.json  package.json  rapport-stocks-yahoo-finance.md
.cargo/: audit.toml  config.toml
.hermes/: build-wsl.sh  jules_delegate.py  task1-full.patch  task3-final.patch
crates/edgecrab-proxy/: Cargo.toml
crates/edgecrab-proxy/src/: auth.rs  cors.rs  e2e_harness.rs  error.rs  guide.rs  http_client.rs  lib.rs  registry.rs  resolve.rs  server.rs  stream_agg.rs
crates/edgecrab-proxy/src/backend/: adapter.rs  auth_file.rs  auth_lock.rs  auth_store.rs  factory.rs  forwarder.rs  mod.rs  provider.rs
crates/edgecrab-proxy/src/backend/nous/: adapter.rs  device_flow.rs  inference_url.rs  jwt.rs  mod.rs  quarantine.rs  refresh.rs
crates/edgecrab-proxy/src/backend/xai/: adapter.rs  mod.rs  oauth_login.rs  refresh.rs
crates/edgecrab-proxy/src/oauth/: loopback.rs  mod.rs
crates/edgecrab-proxy/src/wire/: messages.rs  mod.rs  openai.rs  sse.rs
crates/edgecrab-proxy/tests/: e2e_forward_http.rs  e2e_grok_xai_http.rs  e2e_hermes_auth_http.rs  e2e_nous_portal_401_retry_http.rs  e2e_nous_portal_http.rs  e2e_nous_portal_quarantine_http.rs  e2e_proxy_http.rs  e2e_xai_oauth_http.rs
demo/: README.md
extension/: 01-spec.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
reports/: quotes_2026-05-24.md
scripts/: release-version.sh
site/: package.json  (+1 more)
(+646 files in other folders)
