[package]
name = "edgecrab-proxy"
description = "Local OpenAI-compatible proxy for subscription/OAuth LLM backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
edgecrab-core = { workspace = true }
edgecrab-security = { workspace = true }
edgecrab-tools = { workspace = true }
edgecrab-types = { workspace = true }
edgequake-llm = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
edgequake-llm = { workspace = true }
serial_test = "3"
